[js-custom-tab] Fix Unsplash source screen markup: no more overflows and broken buttons

--- a/examples/js-custom-tab/src/unsplash-source.css
+++ b/examples/js-custom-tab/src/unsplash-source.css
@@ -11,24 +11,24 @@ uc-unsplash-source {
 
 uc-modal uc-unsplash-source {
   width: min(
-    calc(var(--uc-dialog-max-width) - var(--uc-padding) * 2),
-    calc(var(--uc-dialog-max-width) - var(--uc-padding) * 2)
+    calc(var(--uc-dialog-width) - var(--uc-padding) * 2),
+    calc(var(--uc-dialog-width) - var(--uc-padding) * 2)
   );
   height: var(--modal-content-height-fill, 100%);
-  max-height: var(--modal-max-content-height);}
+  max-height: var(--modal-max-content-height);
+  margin: 0 auto;
+}
 
 uc-unsplash-source .uc-toolbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: var(--uc-padding);
+  padding: var(--uc-padding) 0;
 }
 
 uc-unsplash-source .uc-content {
   display: flex;
   overflow: hidden;
-  flex: 1 1 0;
   min-height: 0;
 }
 
